--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -259,7 +259,7 @@ function(add_python_test)
         "${RETRO_CONTENT}"
     )
 
-    list(APPEND ENVIROMENT "RETRO_CORE=${PythonModules_libretro_PATH}")
+    list(APPEND ENVIRONMENT "RETRO_CORE=${PythonModules_libretro_PATH}")
     list(APPEND REQUIRED_FILES "$<TARGET_FILE:melondsds_libretro>")
     list(APPEND REQUIRED_FILES "${TEST_SCRIPT}")
     if (RETRO_CONTENT)
