--- a/src/libretro/CMakeLists.txt
+++ b/src/libretro/CMakeLists.txt
@@ -36,6 +36,8 @@ add_library(melondsds_libretro ${LIBRARY_TYPE}
     core/core.cpp
     core/core.hpp
     core/tasks.cpp
+    core/test.cpp
+    core/test.hpp
     environment.cpp
     environment.hpp
     exceptions.cpp
