--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -276,6 +276,18 @@ function(add_python_test)
         endif()
     endmacro()
 
+    if(${RETRO_NDS_SYSFILES})
+        if (NOT RETRO_ARM7_BIOS)
+            set(RETRO_ARM7_BIOS 1)
+        endif()
+        if (NOT RETRO_ARM9_BIOS)
+            set(RETRO_ARM9_BIOS 1)
+        endif()
+        if (NOT RETRO_NDS_FIRMWARE)
+            set(RETRO_NDS_FIRMWARE 1)
+        endif()
+    endif()
+
     expose_system_file(ARM7_BIOS)
     expose_system_file(ARM9_BIOS)
     expose_system_file(ARM7_DSI_BIOS)
