Support the `DSI_SYSFILES` test option

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -292,6 +292,21 @@ function(add_python_test)
         endif()
     endif()
 
+    if(${RETRO_DSI_SYSFILES})
+        if (NOT RETRO_ARM7_DSI_BIOS)
+            set(RETRO_ARM7_DSI_BIOS 1)
+        endif()
+        if (NOT RETRO_ARM9_DSI_BIOS)
+            set(RETRO_ARM9_DSI_BIOS 1)
+        endif()
+        if (NOT RETRO_DSI_FIRMWARE)
+            set(RETRO_DSI_FIRMWARE 1)
+        endif()
+        if (NOT RETRO_DSI_NAND)
+            set(RETRO_DSI_NAND 1)
+        endif()
+    endif()
+
     expose_system_file(ARM7_BIOS)
     expose_system_file(ARM9_BIOS)
     expose_system_file(ARM7_DSI_BIOS)
