Load and copy the NDS ARM BIOS files when DSI_SYSFILES is set

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -293,6 +293,12 @@ function(add_python_test)
     endif()
 
     if(${RETRO_DSI_SYSFILES})
+        if (NOT RETRO_ARM7_BIOS)
+            set(RETRO_ARM7_BIOS 1)
+        endif()
+        if (NOT RETRO_ARM9_BIOS)
+            set(RETRO_ARM9_BIOS 1)
+        endif()
         if (NOT RETRO_ARM7_DSI_BIOS)
             set(RETRO_ARM7_DSI_BIOS 1)
         endif()
