List `FindPythonModules.cmake` as vendored

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,5 @@
 cmake/toolchain/**          linguist-vendored
 cmake/GitInfo.cmake         linguist-vendored
 cmake/FindOpenGLES.cmake    linguist-vendored
+cmake/FindPythonModules.cmake linguist-vendored
 LICENSE                     text
