Clean up soe test options
- Allow tests to be skipped if they need OpenGL but it's unavailable
- Make CONTENT a multi-valued arg

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -69,9 +69,9 @@ cmake_path(GET DSI_NAND FILENAME DSI_NAND_NAME)
 include(CMakePrintHelpers)
 
 function(add_python_test)
-    set(options WILL_FAIL ARM7_BIOS ARM9_BIOS ARM7_DSI_BIOS ARM9_DSI_BIOS NDS_FIRMWARE DSI_FIRMWARE DSI_NAND NDS_SYSFILES DSI_SYSFILES NO_SKIP_ERROR_SCREEN DISABLED)
-    set(oneValueArgs NAME CONTENT TEST_MODULE SKIP_RETURN_CODE TIMEOUT)
-    set(multiValueArgs CORE_OPTION DEPENDS PASS_REGULAR_EXPRESSION FAIL_REGULAR_EXPRESSION SKIP_REGULAR_EXPRESSION LABELS)
+    set(options WILL_FAIL ARM7_BIOS ARM9_BIOS ARM7_DSI_BIOS ARM9_DSI_BIOS NDS_FIRMWARE DSI_FIRMWARE DSI_NAND NDS_SYSFILES DSI_SYSFILES NO_SKIP_ERROR_SCREEN DISABLED REQUIRES_OPENGL)
+    set(oneValueArgs NAME TEST_MODULE SKIP_RETURN_CODE TIMEOUT)
+    set(multiValueArgs CONTENT CORE_OPTION DEPENDS PASS_REGULAR_EXPRESSION FAIL_REGULAR_EXPRESSION SKIP_REGULAR_EXPRESSION LABELS)
     cmake_parse_arguments(PARSE_ARGV 0 RETRO "${options}" "${oneValueArgs}" "${multiValueArgs}")
 
     add_test(
@@ -163,6 +163,9 @@ function(add_python_test)
     endif()
 
     if (RETRO_DISABLED)
+        set_tests_properties("${RETRO_NAME}" PROPERTIES DISABLED TRUE)
+    elseif(RETRO_REQUIRES_OPENGL AND NOT HAVE_OPENGL)
+        message(WARNING "Test '${RETRO_NAME}' requires OpenGL, but the core wasn't built with it. Disabling.")
         set_tests_properties("${RETRO_NAME}" PROPERTIES DISABLED TRUE)
     endif()
 
